BAP-5348: Fix datetime picker layout on mobile
 - fixed review issues

--- a/src/Oro/Bundle/UIBundle/Resources/public/css/less/mobile/filter.less
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/less/mobile/filter.less
@@ -23,6 +23,7 @@
     margin: 10px auto 0;
     max-width: 460px;
     width: 100%;
+    z-index: 1000; // to show over grid's loading mask
     @media only screen and (min-width: 481px) {
       left: 50%;
       margin-left: -230px;
